--- a/src/main/WebApp/WEB-INF/web.xml
+++ b/src/main/WebApp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" id="WebApp_ID">
+<web-app id="WebApp_ID">
 
     <servlet>
         <servlet-name>mini-spring-mvc</servlet-name>
