--- a/src/main/WebApp/WEB-INF/web.xml
+++ b/src/main/WebApp/WEB-INF/web.xml
@@ -1,24 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app id="WebApp_ID">
 
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>beans.xml</param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>com.tiv.mini.spring.web.ContextLoaderListener</listener-class>
+    </listener>
+
     <servlet>
         <servlet-name>mini-spring-mvc</servlet-name>
         <servlet-class>com.tiv.mini.spring.web.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <param-value>/WEB-INF/servlet.xml</param-value>
-        </init-param>
-        <init-param>
-            <param-name>readonly</param-name>
-            <param-value>false</param-value>
-        </init-param>
-        <init-param>
-            <param-name>debug</param-name>
-            <param-value>0</param-value>
-        </init-param>
-        <init-param>
-            <param-name>listings</param-name>
-            <param-value>false</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
